# Frappe_Assistant_Core

./: .gitignore  .pre-commit-config.yaml  .releaserc  .semgrepignore  CHANGELOG.md  MCP_CONFIGURATION.md  README.md  RELEASE_GUIDE.md  RELEASE_v2.1.1.md  package-lock.json  package.json  pyproject.toml  release.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  release.yml  stale.yml  welcome.yml
client_packages/claude-desktop/server/: frappe_assistant_stdio_bridge.py
client_packages/sse-mcp-bridge/sse-mcp-bridge/: ngrok_start.sh  sse_mcp_bridge.py
docs/: API_REFERENCE.md  CUSTOM_MCP_COMPLETED.md  CUSTOM_MCP_FRAMEWORK_PROPOSAL.md  CUSTOM_MCP_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  MCP_TOOL_SERIALIZATION_FIX.md  PERFORMANCE.md  QUICK_START_CLAUDE_DESKTOP.md  README.md  SSE_BRIDGE_INTEGRATION.md  SSE_BRIDGE_QUICK_REFERENCE.md  STREAMABLE_HTTP_IMPLEMENTATION.md  TECHNICAL_DOCUMENTATION.md  TOOL_REFERENCE.md
docs/api/: API_REFERENCE.md  TOOL_REFERENCE.md
docs/architecture/: ARCHITECTURE.md  MCP_STREAMABLEHTTP_GUIDE.md  PERFORMANCE.md  TECHNICAL_DOCUMENTATION.md
docs/development/: PRE_COMMIT_SETUP.md
docs/getting-started/: GETTING_STARTED.md  MIGRATION_GUIDE.md
docs/getting-started/oauth/: oauth_quick_start.md  oauth_setup_guide.md
docs/guides/: CODE_EXECUTION_SECURITY.md  MCP_RESOURCES_GUIDE.md  PLUGIN_MANAGEMENT_GUIDE.md  TOOL_MANAGEMENT_GUIDE.md
docs/oauth/: oauth_setup_guide.md
docs/skills/: insight_v3_skill.md  run_python_code.md
docs/templates/: test_template.py  tool_template.py
frappe_assistant_core/: __init__.py  hooks.py  patches.txt
frappe_assistant_core/api/: admin_api.py  assistant_api.py  fac_endpoint.py  mcp_endpoint.py  oauth_cors.py  oauth_discovery.py  oauth_registration.py  oauth_wellknown_renderer.py
frappe_assistant_core/api/admin/: plugins.py  prompts.py  server.py  skills.py  stats.py  tools.py
frappe_assistant_core/api/handlers/: prompts.py  resources.py  tools.py
frappe_assistant_core/assistant_core/: protocol_handler.py  server.py
frappe_assistant_core/assistant_core/doctype/assistant_audit_log/: assistant_audit_log.json
frappe_assistant_core/change_log/v2/: v2_2_0.md  v2_3_0.md  v2_3_1.md  v2_3_2.md
frappe_assistant_core/constants/: definitions.py
frappe_assistant_core/core/: base_tool.py  tool_registry.py
frappe_assistant_core/data/: system_prompt_templates.json  system_skills.json
frappe_assistant_core/docs/tools/: analyze_business_data.md  create_dashboard.md  create_dashboard_chart.md  create_document.md  create_visualization.md  delete_document.md  extract_file_content.md  fetch.md  generate_report.md  get_doctype_info.md  get_document.md  list_documents.md  list_user_dashboards.md  metadata_list_doctypes.md  metadata_permissions.md  metadata_workflow.md  report_list.md  report_requirements.md  run_database_query.md  run_python_code.md  run_workflow.md  search.md  search_doctype.md  search_documents.md  search_link.md  submit_document.md  update_document.md
frappe_assistant_core/mcp/: server.py  tool_adapter.py
frappe_assistant_core/patches/v2_1/: remove_old_assistant_admin_page.py
frappe_assistant_core/patches/v2_2/: __init__.py  migrate_plugin_settings_to_doctype.py
frappe_assistant_core/patches/v2_3/: __init__.py  set_settings_defaults.py  update_mcp_protocol_version.py
frappe_assistant_core/patches/v2_4/: bump_code_execution_max_recursion.py  install_system_skills.py  rename_skill_to_fac_skill.py  repair_hrms_skill_link_corruption.py  set_vision_provider_defaults.py
frappe_assistant_core/plugins/core/: plugin.py
frappe_assistant_core/plugins/data_science/: plugin.py
frappe_assistant_core/public/: node_modules
frappe_assistant_core/public/css/: fac_admin.css
frappe_assistant_core/public/js/: fac_admin_prompts.js  fac_admin_skills.js  fac_admin_tools.js  fac_admin_utils.js
frappe_assistant_core/services/: sse_bridge.py
frappe_assistant_core/templates/emails/: fac_welcome_invite.html
frappe_assistant_core/tests/: base_test.py  test_admin_api_permissions.py  test_attachment_tools.py  test_audit_log.py  test_skills_hook.py  test_usage_statistics_permissions.py  test_vision_providers.py
frappe_assistant_core/utils/: audit_trail.py  cache.py  code_execution_subprocess.py  dashboard.py  email_invite.py  enhanced_error_handling.py  execution_limits.py  migration_hooks.py  model_warmup.py  oauth_compat.py  ocr_subprocess.py  permissions.py  plugin_manager.py  tool_api.py  tool_category_detector.py
frappe_assistant_core/utils/vision_providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
(+45 files in other folders)
